manifests/installation/bare/onex/onex-apiserver/deployment.yaml
# Copyright 2020 Lingfei Kong <colin404@foxmail.com>. All rights reserved.
# Use of this source code is governed by a MIT style
# license that can be found in the LICENSE file.

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: onex-apiserver # 资源标签
  name: onex-apiserver # 资源名称
spec:
  replicas: 1 # 副本数
  progressDeadlineSeconds: 10
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: onex-apiserver
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: onex-apiserver
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - onex-apiserver
              topologyKey: kubernetes.io/hostname
            weight: 100
      containers:
      - args:
        - --secure-port=52443
        - --bind-address=0.0.0.0
        - --etcd-servers=etcd.infra.svc.onex.io:2379
        - --client-ca-file=/opt/onex/etc/cert/ca.pem
        - --tls-cert-file=/opt/onex/etc/cert/onex-apiserver.pem 
        - --tls-private-key-file=/opt/onex/etc/cert/onex-apiserver-key.pem
        -  --enable-admission-plugins=NamespaceAutoProvision,NamespaceExists,NamespaceLifecycle
        - --v=10
        image: ccr.ccs.tencentyun.com/superproj/onex-apiserver-amd64:v0.1.0
        name: onex-apiserver
        ports:
        - containerPort: 52443
          name: https
          protocol: TCP
        livenessProbe:
          tcpSocket:
            port: 52443
          failureThreshold: 1
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 3
        readinessProbe:
          tcpSocket:
            port: 52443
          failureThreshold: 1
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 3
        startupProbe:
          tcpSocket:
            port: 52443
          failureThreshold: 10
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 3
        resources:
            limits:
              cpu: 250m
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 512Mi
        imagePullPolicy: IfNotPresent
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /opt/onex/etc/cert
          name: onex-tls
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
      terminationGracePeriodSeconds: 5
      volumes:
      - configMap:
          defaultMode: 420
          items:
          - key: onex-apiserver.yaml
            path: onex-apiserver.yaml
          name: onex-apiserver
        name: onex-apiserver
      - secret:
          defaultMode: 420
          secretName: onex-tls
        name: onex-tls
