manifests/installation/bare/onex/onex-apiserver/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: onex-apiserver
  name: onex-apiserver
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https # Set backend is HTTPS
    traefik.ingress.kubernetes.io/service.serverstransport: onex-apiserver@kubernetescrd
spec:
  ports:
  - name: https
    protocol: TCP
    port: 52443
    targetPort: 52443
  selector:
    app: onex-apiserver
  sessionAffinity: None
  type: ClusterIP
