manifests/installation/bare/onex/onex-apiserver/ingressroute.yaml
# Copyright 2022 Lingfei Kong <colin404@foxmail.com>. All rights reserved.
# Use of this source code is governed by a MIT style
# license that can be found in the LICENSE file. The original repo for
# this file is https://github.com/superproj/onex.
#

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: onex-apiserver-https
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`onex.apiserver.superproj.com`) && PathPrefix(`/`)
      services:
        - kind: Service
          name: onex-apiserver
          port: 52443
  tls:
    secretName: onex-apiserver
